fix(layout): reduce layout shifts

--- a/assets/css/_page/_home.scss
+++ b/assets/css/_page/_home.scss
@@ -9,8 +9,8 @@
 
       img {
         display: inline-block;
-        width: 8rem;
-        height: auto;
+        width: 6rem;
+        height: 6rem;
         margin: 0 auto;
         @include border-radius(100%);
         @include box-shadow(0 0 0 .3618em rgba(0, 0, 0, .05));
@@ -24,6 +24,7 @@
     }
 
     .home-title {
+      height: 1.25em;
       font-size: 1.25rem;
       font-weight: bold;
       margin: 0;
@@ -31,6 +32,7 @@
     }
 
     .home-subtitle {
+      height: var(--global-line-height);
       font-size: 1rem;
       font-weight: normal;
       margin: 0;
@@ -38,6 +40,7 @@
     }
 
     .links {
+      height: var(--global-line-height);
       padding: .5rem;
       font-size: 1.5rem;
 
@@ -70,10 +73,6 @@
   .home-profile {
     @include transform(translateY(0));
     padding-top: 2rem;
-  }
-
-  .home-avatar img {
-    width: 6rem;
   }
 
   .summary {
@@ -122,7 +121,7 @@
       -webkit-line-clamp: 3;
       margin-top: .3rem;
       width: 100%;
-      max-height: $global-line-height * 3em;
+      max-height: $global-line-height * 3;
       overflow: hidden;
       text-overflow: ellipsis;
       @include overflow-wrap(break-word);
